--- a/src/assets/sass/pages/_homepage.scss
+++ b/src/assets/sass/pages/_homepage.scss
@@ -631,7 +631,7 @@
         }
         &:nth-child(2) {
           &::before {
-            height: 650px !important;
+            height: 770px !important;
           }
         }
         &:nth-child(3) {
